# cwtrx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ctrl-cache.lib  ctrl.kicad_pcb  ctrl.pro  ctrl.sch  fp-lib-table  pa-cache.lib  pa.kicad_pcb  pa.pro  pa.sch  preamp-cache.lib  rx.kicad_pcb  rx.pro  rx.sch  rx_ctrl.sch  rx_demod.sch  rx_mixer.sch  sym-lib-table  trx-cache.lib  trx.kicad_pcb  trx.pro  trx.sch
cmake/: generic-gcc-avr.cmake
doc/: baumappe.tex  bom.tex  manual.tex
doc/fig/: PA_T1.xcf  PA_T1_IMG_small.xcf  RX_T1.xcf  RX_T1_IMG_small.xcf  keyer_timing_V220.tex  keyer_timing_V230.tex
firmware/: CMakeLists.txt  band.c  band.h  button.c  button.h  config.h.in  display.c  display.h  i2c.c  i2c.h  keyer.c  keyer.h  lcd.c  lcd.h  main.c  menu.c  menu.h  meter.c  meter.h  rot.c  rot.h  si5351.c  si5351.h  tick.c  tick.h  tone.c  tone.h  trx.c  trx.h
hardware/: fp-lib-table  pa.kicad_pcb  pa.pro  pa.sch  rx.kicad_pcb  rx.pro  rx.sch  rx_audio.sch  rx_ctrl.sch  rx_demod.sch  rx_mixer.sch  rx_vfo.sch  sym-lib-table
hardware/mech/: mech.kicad_pcb  mech.sch  mech_back.kicad_pcb  mech_back.pro  mech_back.sch
hardware/production/: complete_bom.ods  mech_bom.ods  pa_bom.ods  pa_rev2_ibom.html  reichelt_bom.csv  rx_bom.ods  rx_rev2_ibom.html
hardware/production/pa/: pa-B_Cu.gbr  pa-B_Mask.gbr  pa-Edge_Cuts.gbr  pa-F_Cu.gbr  pa-F_Mask.gbr  pa-F_SilkS.gbr  pa-NPTH.drl  pa-PTH.drl
hardware/production/rx/: rx-B_Cu.gbr  rx-B_Mask.gbr  rx-Edge_Cuts.gbr  rx-F_Cu.gbr  rx-F_Mask.gbr  rx-F_SilkS.gbr  rx-NPTH.drl  rx-PTH.drl
